--- a/EtecBookUI/src/app/components/login/login.component.html
+++ b/EtecBookUI/src/app/components/login/login.component.html
@@ -38,7 +38,7 @@
           <div class="line"></div>
       </div>
 
-      <a routerLinks="/register" class="w-100 btn btn-success mt-1"> Criar Conta</a>
+      <a routerLink="/register" class="w-100 btn btn-success mt-1"> Criar Conta</a>
   </form>
 
 </main>
